# ComputerGraphics

./: .gitignore
Assignment0/: CMakeLists.txt  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
Assignment0/report/: Assignment 0.md
Assignment0/shaders/: vertex.hlsl
Assignment1_3D_Transformation/CGAssignment1/src/: TRRenderer.cpp  TRWindowsApp.h  main.cpp
Assignment1_3D_Transformation/report/: 17364025贺恩泽.md
Assignment2_Rasterization_ZBuffering/CGAssignment2/: CMakeLists.txt
Assignment2_Rasterization_ZBuffering/CGAssignment2/src/: TRRenderer.cpp  TRShaderPipeline.cpp  main.cpp
Assignment2_Rasterization_ZBuffering/报告文档/: report.md
Assignment3_Lighting_Texturing/CGAssignment3/: CMakeLists.txt  CMakeSettings.json
Assignment3_Lighting_Texturing/CGAssignment3/report/: report.md
Assignment3_Lighting_Texturing/CGAssignment3/src/: TRRenderer.cpp  TRRenderer.h  TRShadingPipeline.cpp  TRShadingPipeline.h  TRShadingState.h  TRTexture2D.cpp  main.cpp
Assignment4_Ray_Tracing/CGAssignment4/: CMakeLists.txt  CMakeSettings.json
Assignment4_Ray_Tracing/CGAssignment4/report/: report.md
Assignment4_Ray_Tracing/CGAssignment4/src/: WindowsApp.cpp  WindowsApp.h  aabb.h  bvh_node.h  camera.h  dielectric.h  hitable.h  hitable_list.h  lambertian.h  main.cpp  material.h  metal.h  ray.h  sphere.h  vec3.h
Assignment5_Bezier_Curve/CGAssignment5/: CMakeLists.txt
Assignment5_Bezier_Curve/CGAssignment5/report/: report.md
Assignment5_Bezier_Curve/CGAssignment5/src/: Utils.cpp  Utils.h  main.cpp
Assignment6_Mass_Spring_Simulation/CGAssignment6/: CMakeLists.txt
(+3 files in other folders)
